[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "garage-os-leboncoin-bridge"
version = "0.1.0"
description = "Internal FastAPI bridge between Garage OS and the unofficial lbc client"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "lbc>=1.1.3,<2",
  "pydantic>=2.10,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]
